# cds

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: main.yml
k8s/: deployment.yaml  ingress.yaml  kc-public-key-secret.yaml  pvc.yaml
k8s/ocp-3.11/: ingress.yaml
src/: handlers.rs  main.rs  utils.rs
swagger/: openapi3.yaml
