[package]
name = "cds"
version = "1.0.4"
authors = ["Pietrangelo Masala <p.masala@entando.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4"
actix-web = "4.2.1"
actix-cors = "0.6"
actix-files = "0.6"
futures = { version = "0.3", default-features = false, features = ["std"]}
sanitize-filename = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
env_logger = "0.9"
derive_more = "0.99.17"
actix-web-middleware-keycloak-auth = "0.4.0"
dotenv = "0.15.0"
flate2 = "1.0.24"
tar = "0.4.38"
log = "0.4"

[dev-dependencies]
reqwest = "0.11"
